src/process/build/log/idf_py_stderr_output_888463
/home/daniel/Documents/GitHub/camara-esp32-espidf/src/process/main/process.c: In function 'app_main':
/home/daniel/Documents/GitHub/camara-esp32-espidf/src/process/main/process.c:173:17: error: 'task1' undeclared (first use in this function)
  173 |     xTaskCreate(task1,"task1",1024*8,NULL,1,NULL)
      |                 ^~~~~
/home/daniel/Documents/GitHub/camara-esp32-espidf/src/process/main/process.c:173:17: note: each undeclared identifier is reported only once for each function it appears in
/home/daniel/Documents/GitHub/camara-esp32-espidf/src/process/main/process.c:173:50: error: expected ';' before '}' token
  173 |     xTaskCreate(task1,"task1",1024*8,NULL,1,NULL)
      |                                                  ^
      |                                                  ;
  174 | }
      | ~                                                 
/home/daniel/Documents/GitHub/camara-esp32-espidf/src/process/main/process.c: In function 'task1':
/home/daniel/Documents/GitHub/camara-esp32-espidf/src/process/main/process.c:227:18: warning: unused variable 'arrsize' [-Wunused-variable]
  227 |         uint32_t arrsize = *ptrVal;
      |                  ^~~~~~~
/home/daniel/Documents/GitHub/camara-esp32-espidf/src/process/main/process.c:193:13: warning: unused variable 'vomax' [-Wunused-variable]
  193 |     uint8_t vomax[3] = {0x28,0x8c,0xf}; // Valores maximos de verde oscuro en hexadecimal en orden RGB
      |             ^~~~~
/home/daniel/Documents/GitHub/camara-esp32-espidf/src/process/main/process.c:183:14: warning: unused variable 'resultsToShow' [-Wunused-variable]
  183 |     uint32_t resultsToShow = 0xa;     // how much data to display
      |              ^~~~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:63: esp-idf/main/CMakeFiles/__idf_main.dir/process.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:4739: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:130: all] Error 2
